--- a/jogo_da_memoria/pubspec.yaml
+++ b/jogo_da_memoria/pubspec.yaml
@@ -59,7 +59,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  fonts:
+    - family: 'splurge'
+      fonts:
+        - asset: 'fonts/splurge.ttf'
   assets:
     - assets/
 
